# qapp

./: CMakeLists.txt  README.md  conanfile.txt  logger.c  logger.h  main.c  mm.xmind  test_logger.cpp
.github/workflows/: build.yml
